Updating table column widths to fix overlap issues

--- a/src/assets/styles/modules/_history.scss
+++ b/src/assets/styles/modules/_history.scss
@@ -28,11 +28,11 @@
       }
 
       &:nth-child(3) {
-        width: em-calc(66px);
+        width: em-calc(56px);
       }
 
       &:nth-child(4) {
-        width: em-calc(47px);
+        width: em-calc(56px);
       }
     }
   }
